Updating the reg

--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: helloaks
-          image: vramakhelloaks.azurecr.io/helloaks
+          image: vramakhelloaksreg.azurecr.io/helloaks
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
